hid scrollbars, fixed nesting issues

--- a/src/Styles.css
+++ b/src/Styles.css
@@ -10,6 +10,9 @@
   -o-animation: 100s scroll infinite linear;
   -ms-animation: 100s scroll infinite linear;
   animation: 100s scroll infinite linear;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  -ms-overflow-style: none;
 }
 @-webkit-keyframes scroll {
   100% {
@@ -45,6 +48,8 @@
   .Root {
     position: fixed;
     height: 100%;
-    overflow: scroll;
+  }
+  .Root::-webkit-scrollbar {
+    display: none;
   }
 }
